--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="shortcut icon" href="https://s3.amazonaws.com/cdn.converte.me/brand/favicon.png" />
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <title>Converte-me</title>
